fix: fixed an issue where translations and markup extensions were not being handled correctly in certain circumstances